@@ -67,6 +67,14 @@ basicGL
 --------------------------------------------------------------------------------
 dis
 
+   EmitterBeamData
+      -- Processing of member data "beamData" was completely omitted.
+         This was causing NaN in Windows when EmitterBeamData object were
+	 copied.
+	 Interesing since it appears at first glance that the defualt
+	 behaviour would have set "beamData" to all 0's.
+	 Maybe it is just the missing "swapBytes" call.
+	 "beamdata" now processed like all other member data in this class
 
 --------------------------------------------------------------------------------
 simulation
